# bernstein

./: .bandit  .bandit-baseline.json  .gitignore  .goosehints  .pre-commit-config.yaml  .semgrep.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  README.md  action.yml  bernstein.yaml  mkdocs.yml  pyproject.toml  pyrightconfig.strict.json  server.json  sonar-project.properties  typos.toml  vulture_whitelist.py
.cursor/rules/: module-map.mdc  overview.mdc
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/workflows/: a2a-federation-e2e.yml  ai-pr-review-gemini.yml  airgap-e2e.yml  ci.yml  (+34 more)
audits/: competitors.md
docs/: ENTERPRISE.md  adapter-deferred.md  agents-md.md  index.md  llms-full.txt  llms.txt  routine-scenarios.md  telemetry.md  use-cases.md
examples/plugins/custom-adapter/: README.md  pyproject.toml
examples/plugins/custom-adapter/src/custom_adapter/: __init__.py  _adapter.py
examples/plugins/custom-adapter/tests/: test_adapter.py
examples/plugins/custom-audit-sink/: README.md  pyproject.toml
examples/plugins/custom-audit-sink/src/custom_audit_sink/: __init__.py  _sink.py
examples/plugins/custom-audit-sink/tests/: test_sink.py
examples/plugins/custom-guardrail/: README.md  pyproject.toml
examples/plugins/custom-guardrail/src/custom_guardrail/: __init__.py  _guardrail.py
examples/plugins/custom-guardrail/tests/: test_guardrail.py
schemas/: audit-multitenant-export-v2.json
scripts/: auto_heal_apply_typos.py  auto_heal_categorize.py  auto_heal_recurrence.py  auto_heal_typos.py  format_release_notes.py  mutmut_critical.py  sign_airgap_wheelhouse.sh
tests/: _beartype_claw.py  conftest.py
tools/: verify_audit_dsse.py
web/: tailwind.config.js
(+836 files in other folders)
