[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bernstein-example-custom-guardrail"
version = "0.1.0"
description = "Example bernstein plugin: no-secrets-in-prompt guardrail"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "bernstein",
]

[project.entry-points."bernstein.plugins"]
custom_guardrail = "custom_guardrail:NoSecretsGuardrailPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/custom_guardrail"]
